--- a/manual/emacspeak_002ddired.html
+++ b/manual/emacspeak_002ddired.html
@@ -176,8 +176,27 @@ unless ‘dired-listing-switches’ contains -l
       </div>
     </dd>
   </dl><span id=
-  "emacspeak_002ddired_002dopen_002dthis_002dfile"></span>
+  "emacspeak_002ddired_002dopen_002dthis_002ddirectory"></span>
   <h4 class="subsubsection">12.48.1.8
+  emacspeak-dired-open-this-directory</h4>
+  <dl>
+    <dt id=
+    "index-emacspeak_002ddired_002dopen_002dthis_002ddirectory">
+    Command:
+    <strong>emacspeak-dired-open-this-directory</strong></dt>
+    <dd>
+      <span id=
+      "index-emacspeak_002ddired_002dopen_002dthis_002ddirectory-1">
+      </span>
+      <div class="format">
+        <pre class=
+        "format">Open directory corresponding to file on current line.
+</pre>
+      </div>
+    </dd>
+  </dl><span id=
+  "emacspeak_002ddired_002dopen_002dthis_002dfile"></span>
+  <h4 class="subsubsection">12.48.1.9
   emacspeak-dired-open-this-file</h4>
   <dl>
     <dt id="index-emacspeak_002ddired_002dopen_002dthis_002dfile">
@@ -192,7 +211,8 @@ unless ‘dired-listing-switches’ contains -l
       </div>
     </dd>
   </dl><span id="emacspeak_002ddired_002dpdf_002dopen"></span>
-  <h4 class="subsubsection">12.48.1.9 emacspeak-dired-pdf-open</h4>
+  <h4 class="subsubsection">12.48.1.10
+  emacspeak-dired-pdf-open</h4>
   <dl>
     <dt id="index-emacspeak_002ddired_002dpdf_002dopen">Command:
     <strong>emacspeak-dired-pdf-open</strong></dt>
@@ -205,7 +225,7 @@ unless ‘dired-listing-switches’ contains -l
       </div>
     </dd>
   </dl><span id="emacspeak_002ddired_002dplay_002dduration"></span>
-  <h4 class="subsubsection">12.48.1.10
+  <h4 class="subsubsection">12.48.1.11
   emacspeak-dired-play-duration</h4>
   <dl>
     <dt id="index-emacspeak_002ddired_002dplay_002dduration">
@@ -223,7 +243,7 @@ If on a directory, speak the total duration of all mp3 files under
     </dd>
   </dl><span id=
   "emacspeak_002ddired_002drpm_002dquery_002din_002ddired"></span>
-  <h4 class="subsubsection">12.48.1.11
+  <h4 class="subsubsection">12.48.1.12
   emacspeak-dired-rpm-query-in-dired</h4>
   <dl>
     <dt id=
@@ -241,7 +261,7 @@ If on a directory, speak the total duration of all mp3 files under
     </dd>
   </dl><span id=
   "emacspeak_002ddired_002dshow_002dfile_002dtype"></span>
-  <h4 class="subsubsection">12.48.1.12
+  <h4 class="subsubsection">12.48.1.13
   emacspeak-dired-show-file-type</h4>
   <dl>
     <dt id="index-emacspeak_002ddired_002dshow_002dfile_002dtype">
@@ -262,7 +282,7 @@ options passed to command ‘file’.
     </dd>
   </dl><span id=
   "emacspeak_002ddired_002dspeak_002dfile_002daccess_002dtime"></span>
-  <h4 class="subsubsection">12.48.1.13
+  <h4 class="subsubsection">12.48.1.14
   emacspeak-dired-speak-file-access-time</h4>
   <dl>
     <dt id=
@@ -280,7 +300,7 @@ options passed to command ‘file’.
     </dd>
   </dl><span id=
   "emacspeak_002ddired_002dspeak_002dfile_002dmodification_002dtime"></span>
-  <h4 class="subsubsection">12.48.1.14
+  <h4 class="subsubsection">12.48.1.15
   emacspeak-dired-speak-file-modification-time</h4>
   <dl>
     <dt id=
@@ -299,7 +319,7 @@ options passed to command ‘file’.
     </dd>
   </dl><span id=
   "emacspeak_002ddired_002dspeak_002dfile_002dpermissions"></span>
-  <h4 class="subsubsection">12.48.1.15
+  <h4 class="subsubsection">12.48.1.16
   emacspeak-dired-speak-file-permissions</h4>
   <dl>
     <dt id=
@@ -318,7 +338,7 @@ options passed to command ‘file’.
     </dd>
   </dl><span id=
   "emacspeak_002ddired_002dspeak_002dfile_002dsize"></span>
-  <h4 class="subsubsection">12.48.1.16
+  <h4 class="subsubsection">12.48.1.17
   emacspeak-dired-speak-file-size</h4>
   <dl>
     <dt id="index-emacspeak_002ddired_002dspeak_002dfile_002dsize">
@@ -334,7 +354,7 @@ On a directory line, run du -s on the directory to speak its size.
     </dd>
   </dl><span id=
   "emacspeak_002ddired_002dspeak_002dheader_002dline"></span>
-  <h4 class="subsubsection">12.48.1.17
+  <h4 class="subsubsection">12.48.1.18
   emacspeak-dired-speak-header-line</h4>
   <dl>
     <dt id=
@@ -352,7 +372,7 @@ On a directory line, run du -s on the directory to speak its size.
     </dd>
   </dl><span id=
   "emacspeak_002ddired_002dspeak_002dsymlink_002dtarget"></span>
-  <h4 class="subsubsection">12.48.1.18
+  <h4 class="subsubsection">12.48.1.19
   emacspeak-dired-speak-symlink-target</h4>
   <dl>
     <dt id=
@@ -371,7 +391,7 @@ On a directory line, run du -s on the directory to speak its size.
     </dd>
   </dl><span id=
   "emacspeak_002dlocate_002dplay_002dresults_002das_002dplaylist"></span>
-  <h4 class="subsubsection">12.48.1.19
+  <h4 class="subsubsection">12.48.1.20
   emacspeak-locate-play-results-as-playlist</h4>
   <dl>
     <dt id=
