--- a/manual/emacspeak_002dm_002dplayer.html
+++ b/manual/emacspeak_002dm_002dplayer.html
@@ -848,8 +848,23 @@ to play  tracks.
 </pre>
       </div>
     </dd>
-  </dl><span id="emacspeak_002dm_002dplayer_002dmode"></span>
+  </dl><span id="emacspeak_002dm_002dplayer_002dloop"></span>
   <h4 class="subsubsection">12.116.2.43
+  emacspeak-m-player-loop</h4>
+  <dl>
+    <dt id="index-emacspeak_002dm_002dplayer_002dloop">Command:
+    <strong>emacspeak-m-player-loop</strong></dt>
+    <dd>
+      <span id=
+      "index-emacspeak_002dm_002dplayer_002dloop-1"></span>
+      <div class="format">
+        <pre class=
+        "format">M-Player with repeat indefinitely  turned on.
+</pre>
+      </div>
+    </dd>
+  </dl><span id="emacspeak_002dm_002dplayer_002dmode"></span>
+  <h4 class="subsubsection">12.116.2.44
   emacspeak-m-player-mode</h4>
   <dl>
     <dt id="index-emacspeak_002dm_002dplayer_002dmode">Command:
@@ -943,7 +958,7 @@ final or penultimate step during initialization.
     </dd>
   </dl><span id=
   "emacspeak_002dm_002dplayer_002dmode_002dline"></span>
-  <h4 class="subsubsection">12.116.2.44
+  <h4 class="subsubsection">12.116.2.45
   emacspeak-m-player-mode-line</h4>
   <dl>
     <dt id="index-emacspeak_002dm_002dplayer_002dmode_002dline">
@@ -958,7 +973,7 @@ final or penultimate step during initialization.
     </dd>
   </dl><span id=
   "emacspeak_002dm_002dplayer_002dnext_002dtrack"></span>
-  <h4 class="subsubsection">12.116.2.45
+  <h4 class="subsubsection">12.116.2.46
   emacspeak-m-player-next-track</h4>
   <dl>
     <dt id="index-emacspeak_002dm_002dplayer_002dnext_002dtrack">
@@ -972,7 +987,7 @@ final or penultimate step during initialization.
       </div>
     </dd>
   </dl><span id="emacspeak_002dm_002dplayer_002dpan"></span>
-  <h4 class="subsubsection">12.116.2.46 emacspeak-m-player-pan</h4>
+  <h4 class="subsubsection">12.116.2.47 emacspeak-m-player-pan</h4>
   <dl>
     <dt id="index-emacspeak_002dm_002dplayer_002dpan">Command:
     <strong>emacspeak-m-player-pan</strong></dt>
@@ -985,7 +1000,7 @@ final or penultimate step during initialization.
       </div>
     </dd>
   </dl><span id="emacspeak_002dm_002dplayer_002dpause"></span>
-  <h4 class="subsubsection">12.116.2.47
+  <h4 class="subsubsection">12.116.2.48
   emacspeak-m-player-pause</h4>
   <dl>
     <dt id="index-emacspeak_002dm_002dplayer_002dpause">Command:
@@ -1000,7 +1015,7 @@ final or penultimate step during initialization.
     </dd>
   </dl><span id=
   "emacspeak_002dm_002dplayer_002dpersist_002dprocess"></span>
-  <h4 class="subsubsection">12.116.2.48
+  <h4 class="subsubsection">12.116.2.49
   emacspeak-m-player-persist-process</h4>
   <dl>
     <dt id=
@@ -1021,7 +1036,7 @@ Optional interactive prefix arg prompts for name to use for  player.
     </dd>
   </dl><span id=
   "emacspeak_002dm_002dplayer_002dplay_002drss"></span>
-  <h4 class="subsubsection">12.116.2.49
+  <h4 class="subsubsection">12.116.2.50
   emacspeak-m-player-play-rss</h4>
   <dl>
     <dt id="index-emacspeak_002dm_002dplayer_002dplay_002drss">
@@ -1039,7 +1054,7 @@ Optional interactive prefix arg prompts for name to use for  player.
     </dd>
   </dl><span id=
   "emacspeak_002dm_002dplayer_002dplay_002dtracks_002djump"></span>
-  <h4 class="subsubsection">12.116.2.50
+  <h4 class="subsubsection">12.116.2.51
   emacspeak-m-player-play-tracks-jump</h4>
   <dl>
     <dt id=
@@ -1059,7 +1074,7 @@ Optional interactive prefix arg prompts for name to use for  player.
     </dd>
   </dl><span id=
   "emacspeak_002dm_002dplayer_002dplay_002dtree_002dup"></span>
-  <h4 class="subsubsection">12.116.2.51
+  <h4 class="subsubsection">12.116.2.52
   emacspeak-m-player-play-tree-up</h4>
   <dl>
     <dt id=
@@ -1079,7 +1094,7 @@ Optional interactive prefix arg prompts for name to use for  player.
     </dd>
   </dl><span id=
   "emacspeak_002dm_002dplayer_002dpop_002dto_002dplayer"></span>
-  <h4 class="subsubsection">12.116.2.52
+  <h4 class="subsubsection">12.116.2.53
   emacspeak-m-player-pop-to-player</h4>
   <dl>
     <dt id=
@@ -1096,7 +1111,7 @@ Optional interactive prefix arg prompts for name to use for  player.
     </dd>
   </dl><span id=
   "emacspeak_002dm_002dplayer_002dprevious_002dtrack"></span>
-  <h4 class="subsubsection">12.116.2.53
+  <h4 class="subsubsection">12.116.2.54
   emacspeak-m-player-previous-track</h4>
   <dl>
     <dt id=
@@ -1112,7 +1127,7 @@ Optional interactive prefix arg prompts for name to use for  player.
       </div>
     </dd>
   </dl><span id="emacspeak_002dm_002dplayer_002dquit"></span>
-  <h4 class="subsubsection">12.116.2.54
+  <h4 class="subsubsection">12.116.2.55
   emacspeak-m-player-quit</h4>
   <dl>
     <dt id="index-emacspeak_002dm_002dplayer_002dquit">Command:
@@ -1127,7 +1142,7 @@ Optional interactive prefix arg prompts for name to use for  player.
     </dd>
   </dl><span id=
   "emacspeak_002dm_002dplayer_002dreset_002doptions"></span>
-  <h4 class="subsubsection">12.116.2.55
+  <h4 class="subsubsection">12.116.2.56
   emacspeak-m-player-reset-options</h4>
   <dl>
     <dt id=
@@ -1143,7 +1158,7 @@ Optional interactive prefix arg prompts for name to use for  player.
     </dd>
   </dl><span id=
   "emacspeak_002dm_002dplayer_002dreset_002dspeed"></span>
-  <h4 class="subsubsection">12.116.2.56
+  <h4 class="subsubsection">12.116.2.57
   emacspeak-m-player-reset-speed</h4>
   <dl>
     <dt id="index-emacspeak_002dm_002dplayer_002dreset_002dspeed">
@@ -1158,7 +1173,7 @@ Optional interactive prefix arg prompts for name to use for  player.
     </dd>
   </dl><span id=
   "emacspeak_002dm_002dplayer_002drestore_002dprocess"></span>
-  <h4 class="subsubsection">12.116.2.57
+  <h4 class="subsubsection">12.116.2.58
   emacspeak-m-player-restore-process</h4>
   <dl>
     <dt id=
@@ -1177,7 +1192,7 @@ Check first if current buffer is in emacspeak-m-player-mode.
     </dd>
   </dl><span id=
   "emacspeak_002dm_002dplayer_002dright_002dchannel"></span>
-  <h4 class="subsubsection">12.116.2.58
+  <h4 class="subsubsection">12.116.2.59
   emacspeak-m-player-right-channel</h4>
   <dl>
     <dt id=
@@ -1193,7 +1208,7 @@ Check first if current buffer is in emacspeak-m-player-mode.
     </dd>
   </dl><span id=
   "emacspeak_002dm_002dplayer_002dscale_002dspeed"></span>
-  <h4 class="subsubsection">12.116.2.59
+  <h4 class="subsubsection">12.116.2.60
   emacspeak-m-player-scale-speed</h4>
   <dl>
     <dt id="index-emacspeak_002dm_002dplayer_002dscale_002dspeed">
@@ -1211,7 +1226,7 @@ Check first if current buffer is in emacspeak-m-player-mode.
     </dd>
   </dl><span id=
   "emacspeak_002dm_002dplayer_002dseek_002dabsolute"></span>
-  <h4 class="subsubsection">12.116.2.60
+  <h4 class="subsubsection">12.116.2.61
   emacspeak-m-player-seek-absolute</h4>
   <dl>
     <dt id=
@@ -1231,7 +1246,7 @@ The time position can also be specified as HH:MM:SS.
     </dd>
   </dl><span id=
   "emacspeak_002dm_002dplayer_002dseek_002dpercentage"></span>
-  <h4 class="subsubsection">12.116.2.61
+  <h4 class="subsubsection">12.116.2.62
   emacspeak-m-player-seek-percentage</h4>
   <dl>
     <dt id=
@@ -1250,7 +1265,7 @@ The time position can also be specified as HH:MM:SS.
     </dd>
   </dl><span id=
   "emacspeak_002dm_002dplayer_002dseek_002drelative"></span>
-  <h4 class="subsubsection">12.116.2.62
+  <h4 class="subsubsection">12.116.2.63
   emacspeak-m-player-seek-relative</h4>
   <dl>
     <dt id=
@@ -1270,7 +1285,7 @@ Time offset can be specified as a number of seconds, or as HH:MM:SS.
     </dd>
   </dl><span id=
   "emacspeak_002dm_002dplayer_002dset_002dclip_002dend"></span>
-  <h4 class="subsubsection">12.116.2.63
+  <h4 class="subsubsection">12.116.2.64
   emacspeak-m-player-set-clip-end</h4>
   <dl>
     <dt id=
@@ -1291,7 +1306,7 @@ Time offset can be specified as a number of seconds, or as HH:MM:SS.
     </dd>
   </dl><span id=
   "emacspeak_002dm_002dplayer_002dset_002dclip_002dstart"></span>
-  <h4 class="subsubsection">12.116.2.64
+  <h4 class="subsubsection">12.116.2.65
   emacspeak-m-player-set-clip-start</h4>
   <dl>
     <dt id=
@@ -1311,7 +1326,7 @@ Interactive prefix arg prompts for the timestamp.
       </div>
     </dd>
   </dl><span id="emacspeak_002dm_002dplayer_002dshuffle"></span>
-  <h4 class="subsubsection">12.116.2.65
+  <h4 class="subsubsection">12.116.2.66
   emacspeak-m-player-shuffle</h4>
   <dl>
     <dt id="index-emacspeak_002dm_002dplayer_002dshuffle">Command:
@@ -1331,7 +1346,7 @@ Interactive prefix arg prompts for the timestamp.
     </dd>
   </dl><span id=
   "emacspeak_002dm_002dplayer_002dslave_002dcommand"></span>
-  <h4 class="subsubsection">12.116.2.66
+  <h4 class="subsubsection">12.116.2.67
   emacspeak-m-player-slave-command</h4>
   <dl>
     <dt id=
@@ -1349,7 +1364,7 @@ Interactive prefix arg prompts for the timestamp.
       </div>
     </dd>
   </dl><span id="emacspeak_002dm_002dplayer_002dslower"></span>
-  <h4 class="subsubsection">12.116.2.67
+  <h4 class="subsubsection">12.116.2.68
   emacspeak-m-player-slower</h4>
   <dl>
     <dt id="index-emacspeak_002dm_002dplayer_002dslower">Command:
@@ -1364,7 +1379,7 @@ Interactive prefix arg prompts for the timestamp.
     </dd>
   </dl><span id=
   "emacspeak_002dm_002dplayer_002dstream_002dinfo"></span>
-  <h4 class="subsubsection">12.116.2.68
+  <h4 class="subsubsection">12.116.2.69
   emacspeak-m-player-stream-info</h4>
   <dl>
     <dt id="index-emacspeak_002dm_002dplayer_002dstream_002dinfo">
@@ -1383,7 +1398,7 @@ Interactive prefix arg toggles automatic cueing of ICY info updates.
     </dd>
   </dl><span id=
   "emacspeak_002dm_002dplayer_002dtoggle_002dextrastereo"></span>
-  <h4 class="subsubsection">12.116.2.69
+  <h4 class="subsubsection">12.116.2.70
   emacspeak-m-player-toggle-extrastereo</h4>
   <dl>
     <dt id=
@@ -1401,7 +1416,7 @@ Interactive prefix arg toggles automatic cueing of ICY info updates.
       </div>
     </dd>
   </dl><span id="emacspeak_002dm_002dplayer_002durl"></span>
-  <h4 class="subsubsection">12.116.2.70 emacspeak-m-player-url</h4>
+  <h4 class="subsubsection">12.116.2.71 emacspeak-m-player-url</h4>
   <dl>
     <dt id="index-emacspeak_002dm_002dplayer_002durl">Command:
     <strong>emacspeak-m-player-url</strong> <em>(url &amp;optional
@@ -1423,7 +1438,7 @@ Interactive prefix arg toggles automatic cueing of ICY info updates.
     </dd>
   </dl><span id=
   "emacspeak_002dm_002dplayer_002dusing_002dhrtf"></span>
-  <h4 class="subsubsection">12.116.2.71
+  <h4 class="subsubsection">12.116.2.72
   emacspeak-m-player-using-hrtf</h4>
   <dl>
     <dt id="index-emacspeak_002dm_002dplayer_002dusing_002dhrtf">
@@ -1445,7 +1460,7 @@ This will work if the soundcard is set to 48000.
     </dd>
   </dl><span id=
   "emacspeak_002dm_002dplayer_002dusing_002dopenal"></span>
-  <h4 class="subsubsection">12.116.2.72
+  <h4 class="subsubsection">12.116.2.73
   emacspeak-m-player-using-openal</h4>
   <dl>
     <dt id="index-emacspeak_002dm_002dplayer_002dusing_002dopenal">
@@ -1468,7 +1483,7 @@ This will work if the soundcard is set to 48000.
     </dd>
   </dl><span id=
   "emacspeak_002dm_002dplayer_002dvolume_002dchange"></span>
-  <h4 class="subsubsection">12.116.2.73
+  <h4 class="subsubsection">12.116.2.74
   emacspeak-m-player-volume-change</h4>
   <dl>
     <dt id=
@@ -1487,7 +1502,7 @@ This will work if the soundcard is set to 48000.
     </dd>
   </dl><span id=
   "emacspeak_002dm_002dplayer_002dvolume_002ddown"></span>
-  <h4 class="subsubsection">12.116.2.74
+  <h4 class="subsubsection">12.116.2.75
   emacspeak-m-player-volume-down</h4>
   <dl>
     <dt id="index-emacspeak_002dm_002dplayer_002dvolume_002ddown">
@@ -1502,7 +1517,7 @@ This will work if the soundcard is set to 48000.
     </dd>
   </dl><span id=
   "emacspeak_002dm_002dplayer_002dvolume_002dset"></span>
-  <h4 class="subsubsection">12.116.2.75
+  <h4 class="subsubsection">12.116.2.76
   emacspeak-m-player-volume-set</h4>
   <dl>
     <dt id="index-emacspeak_002dm_002dplayer_002dvolume_002dset">
@@ -1520,7 +1535,7 @@ This will work if the soundcard is set to 48000.
     </dd>
   </dl><span id=
   "emacspeak_002dm_002dplayer_002dvolume_002dup"></span>
-  <h4 class="subsubsection">12.116.2.76
+  <h4 class="subsubsection">12.116.2.77
   emacspeak-m-player-volume-up</h4>
   <dl>
     <dt id="index-emacspeak_002dm_002dplayer_002dvolume_002dup">
@@ -1535,7 +1550,7 @@ This will work if the soundcard is set to 48000.
     </dd>
   </dl><span id=
   "emacspeak_002dm_002dplayer_002dwrite_002dclip"></span>
-  <h4 class="subsubsection">12.116.2.77
+  <h4 class="subsubsection">12.116.2.78
   emacspeak-m-player-write-clip</h4>
   <dl>
     <dt id="index-emacspeak_002dm_002dplayer_002dwrite_002dclip">
@@ -1551,7 +1566,7 @@ This will work if the soundcard is set to 48000.
     </dd>
   </dl><span id=
   "emacspeak_002dm_002dplayer_002dyoutube_002dplayer"></span>
-  <h4 class="subsubsection">12.116.2.78
+  <h4 class="subsubsection">12.116.2.79
   emacspeak-m-player-youtube-player</h4>
   <dl>
     <dt id=
@@ -1577,7 +1592,7 @@ Optional prefix arg ‘best’ chooses highest.
       </div>
     </dd>
   </dl><span id="emacspeak_002dmultimedia"></span>
-  <h4 class="subsubsection">12.116.2.79 emacspeak-multimedia</h4>
+  <h4 class="subsubsection">12.116.2.80 emacspeak-multimedia</h4>
   <dl>
     <dt id="index-emacspeak_002dmultimedia">Command:
     <strong>emacspeak-multimedia</strong></dt>
