--- a/manual/emacspeak_002dm_002dplayer.html
+++ b/manual/emacspeak_002dm_002dplayer.html
@@ -855,7 +855,12 @@ to play  tracks.
     <dt id="index-emacspeak_002dm_002dplayer_002dloop">Command:
     <strong>emacspeak-m-player-loop</strong></dt>
     <dd>
-      <span id=
+      <dl compact="compact">
+        <dt><kbd>C-e x ;</kbd></dt>
+        <dd><span id="index-C_002de-x-_003b"></span></dd>
+        <dt><kbd>&lt;fn&gt; x ;</kbd></dt>
+        <dd><span id="index-_003cfn_003e-x-_003b"></span></dd>
+      </dl><span id=
       "index-emacspeak_002dm_002dplayer_002dloop-1"></span>
       <div class="format">
         <pre class=
