--- a/manual/emacspeak_002dpronounce.html
+++ b/manual/emacspeak_002dpronounce.html
@@ -295,6 +295,22 @@ to explicitly turn pronunciations on or off.
 </pre>
       </div>
     </dd>
+  </dl><span id=
+  "emacspeak_002dpronounce_002dtoggle_002dvoice"></span>
+  <h4 class="subsubsection">12.147.1.11
+  emacspeak-pronounce-toggle-voice</h4>
+  <dl>
+    <dt id="index-emacspeak_002dpronounce_002dtoggle_002dvoice">
+    Command: <strong>emacspeak-pronounce-toggle-voice</strong></dt>
+    <dd>
+      <span id=
+      "index-emacspeak_002dpronounce_002dtoggle_002dvoice-1"></span>
+      <div class="format">
+        <pre class=
+        "format">Toggle use of pronunciation personality.
+</pre>
+      </div>
+    </dd>
   </dl><span id="emacspeak_002dpronounce-Options"></span>
   <h4 class="subsection">12.147.2 emacspeak-pronounce Options</h4>
   <dl>
