--- a/manual/index.html
+++ b/manual/index.html
@@ -53,7 +53,7 @@
   <h1 class="settitle c2">Emacspeak User’s Manual — 2nd
   Edition.</h1>
   <p>This manual documents <strong>Emacspeak, The Complete Audio
-  Desktop</strong> and was last updated on May 18,
+  Desktop</strong> and was last updated on May 28,
   2021.</p><span id="SEC_Overview"></span>
   <h2 class="shortcontents-heading">Short Table of Contents</h2>
   <div class="shortcontents">
@@ -6704,6 +6704,14 @@
                   "toc-emacspeak_002dpronounce_002dtoggle_002duse_002dof_002ddictionaries">
                   12.147.1.10
                   emacspeak-pronounce-toggle-use-of-dictionaries</a></li>
+                  <li><a id=
+                  "toc-emacspeak_002dpronounce_002dtoggle_002dvoice"
+                  href=
+                  "emacspeak_002dpronounce.html#emacspeak_002dpronounce_002dtoggle_002dvoice"
+                  name=
+                  "toc-emacspeak_002dpronounce_002dtoggle_002dvoice">
+                  12.147.1.11
+                  emacspeak-pronounce-toggle-voice</a></li>
                 </ul>
               </li>
               <li><a id="toc-emacspeak_002dpronounce-Options" href=
