--- a/manual/Key-Index.html
+++ b/manual/Key-Index.html
@@ -2012,6 +2012,15 @@
     <tr>
       <td></td>
       <td valign="top"><a href=
+      "emacspeak_002dm_002dplayer.html#index-_003cfn_003e-x-_003b"><code>
+      &lt;fn&gt; x ;</code></a>:</td>
+      <td>&nbsp;</td>
+      <td valign="top"><a href=
+      "emacspeak_002dm_002dplayer.html">emacspeak-m-player</a></td>
+    </tr>
+    <tr>
+      <td></td>
+      <td valign="top"><a href=
       "emacspeak_002dwizards.html#index-_003cfn_003e-x-_003d"><code>
       &lt;fn&gt; x =</code></a>:</td>
       <td>&nbsp;</td>
@@ -5703,6 +5712,15 @@
       <td>&nbsp;</td>
       <td valign="top"><a href=
       "emacspeak_002dwizards.html">emacspeak-wizards</a></td>
+    </tr>
+    <tr>
+      <td></td>
+      <td valign="top"><a href=
+      "emacspeak_002dm_002dplayer.html#index-C_002de-x-_003b"><code>
+      C-e x ;</code></a>:</td>
+      <td>&nbsp;</td>
+      <td valign="top"><a href=
+      "emacspeak_002dm_002dplayer.html">emacspeak-m-player</a></td>
     </tr>
     <tr>
       <td></td>
