--- a/manual/Key-Index.html
+++ b/manual/Key-Index.html
@@ -2057,6 +2057,15 @@
     <tr>
       <td></td>
       <td valign="top"><a href=
+      "emacspeak_002dspeak.html#index-_003cfn_003e-x-d"><code>&lt;fn&gt;
+      x d</code></a>:</td>
+      <td>&nbsp;</td>
+      <td valign="top"><a href=
+      "emacspeak_002dspeak.html">emacspeak-speak</a></td>
+    </tr>
+    <tr>
+      <td></td>
+      <td valign="top"><a href=
       "emacspeak_002dwe.html#index-_003cfn_003e-x-e-a"><code>&lt;fn&gt;
       x e a</code></a>:</td>
       <td>&nbsp;</td>
@@ -5757,6 +5766,15 @@
       <td>&nbsp;</td>
       <td valign="top"><a href=
       "emacspeak_002dwizards.html">emacspeak-wizards</a></td>
+    </tr>
+    <tr>
+      <td></td>
+      <td valign="top"><a href=
+      "emacspeak_002dspeak.html#index-C_002de-x-d"><code>C-e x
+      d</code></a>:</td>
+      <td>&nbsp;</td>
+      <td valign="top"><a href=
+      "emacspeak_002dspeak.html">emacspeak-speak</a></td>
     </tr>
     <tr>
       <td></td>
