--- a/manual/emacspeak_002dspeak.html
+++ b/manual/emacspeak_002dspeak.html
@@ -932,8 +932,37 @@ the sense of the filter.
 </pre>
       </div>
     </dd>
-  </dl><span id="emacspeak_002dspeak_002dmessage_002dagain"></span>
+  </dl><span id=
+  "emacspeak_002dspeak_002dload_002ddirectory_002dsettings"></span>
   <h4 class="subsubsection">12.175.1.41
+  emacspeak-speak-load-directory-settings</h4>
+  <dl>
+    <dt id=
+    "index-emacspeak_002dspeak_002dload_002ddirectory_002dsettings">
+    Command:
+    <strong>emacspeak-speak-load-directory-settings</strong>
+    <em>(&amp;optional dir)</em></dt>
+    <dd>
+      <dl compact="compact">
+        <dt><kbd>C-e x d</kbd></dt>
+        <dd><span id="index-C_002de-x-d"></span></dd>
+        <dt><kbd>&lt;fn&gt; x d</kbd></dt>
+        <dd><span id="index-_003cfn_003e-x-d"></span></dd>
+      </dl><span id=
+      "index-emacspeak_002dspeak_002dload_002ddirectory_002dsettings-1"></span>
+      <div class="format">
+        <pre class=
+        "format">Load a directory specific Emacspeak settings file.
+This is typically used to load up settings that are specific to
+an electronic book consisting of many files in the same
+directory.
+
+(fn &amp;optional DIR)
+</pre>
+      </div>
+    </dd>
+  </dl><span id="emacspeak_002dspeak_002dmessage_002dagain"></span>
+  <h4 class="subsubsection">12.175.1.42
   emacspeak-speak-message-again</h4>
   <dl>
     <dt id="index-emacspeak_002dspeak_002dmessage_002dagain-1">
@@ -958,7 +987,7 @@ The message is also placed in the kill ring for convenient yanking
     </dd>
   </dl><span id=
   "emacspeak_002dspeak_002dmessage_002dat_002dtime"></span>
-  <h4 class="subsubsection">12.175.1.42
+  <h4 class="subsubsection">12.175.1.43
   emacspeak-speak-message-at-time</h4>
   <dl>
     <dt id="index-emacspeak_002dspeak_002dmessage_002dat_002dtime">
@@ -983,7 +1012,7 @@ See documentation for command run-at-time for details on time-spec.
     </dd>
   </dl><span id=
   "emacspeak_002dspeak_002dmicroseconds_002dsince_002depoch"></span>
-  <h4 class="subsubsection">12.175.1.43
+  <h4 class="subsubsection">12.175.1.44
   emacspeak-speak-microseconds-since-epoch</h4>
   <dl>
     <dt id=
@@ -1005,7 +1034,7 @@ See documentation for command run-at-time for details on time-spec.
     </dd>
   </dl><span id=
   "emacspeak_002dspeak_002dmilliseconds_002dsince_002depoch"></span>
-  <h4 class="subsubsection">12.175.1.44
+  <h4 class="subsubsection">12.175.1.45
   emacspeak-speak-milliseconds-since-epoch</h4>
   <dl>
     <dt id=
@@ -1027,7 +1056,7 @@ See documentation for command run-at-time for details on time-spec.
     </dd>
   </dl><span id=
   "emacspeak_002dspeak_002dminor_002dmode_002dline"></span>
-  <h4 class="subsubsection">12.175.1.45
+  <h4 class="subsubsection">12.175.1.46
   emacspeak-speak-minor-mode-line</h4>
   <dl>
     <dt id=
@@ -1052,7 +1081,7 @@ Optional interactive prefix arg ‘log-msg’ logs spoken info to
       </div>
     </dd>
   </dl><span id="emacspeak_002dspeak_002dmode_002dline"></span>
-  <h4 class="subsubsection">12.175.1.46
+  <h4 class="subsubsection">12.175.1.47
   emacspeak-speak-mode-line</h4>
   <dl>
     <dt id="index-emacspeak_002dspeak_002dmode_002dline-1">Command:
@@ -1076,7 +1105,7 @@ Interactive prefix arg speaks buffer info.
       </div>
     </dd>
   </dl><span id="emacspeak_002dspeak_002dnext_002dfield"></span>
-  <h4 class="subsubsection">12.175.1.47
+  <h4 class="subsubsection">12.175.1.48
   emacspeak-speak-next-field</h4>
   <dl>
     <dt id="index-emacspeak_002dspeak_002dnext_002dfield">Command:
@@ -1096,7 +1125,7 @@ Interactive prefix arg speaks buffer info.
     </dd>
   </dl><span id=
   "emacspeak_002dspeak_002dnext_002dpersonality_002dchunk"></span>
-  <h4 class="subsubsection">12.175.1.48
+  <h4 class="subsubsection">12.175.1.49
   emacspeak-speak-next-personality-chunk</h4>
   <dl>
     <dt id=
@@ -1118,7 +1147,7 @@ Interactive prefix arg speaks buffer info.
       </div>
     </dd>
   </dl><span id="emacspeak_002dspeak_002dother_002dbuffer"></span>
-  <h4 class="subsubsection">12.175.1.49
+  <h4 class="subsubsection">12.175.1.50
   emacspeak-speak-other-buffer</h4>
   <dl>
     <dt id="index-emacspeak_002dspeak_002dother_002dbuffer">
@@ -1142,7 +1171,7 @@ Useful to listen to a buffer without switching  contexts.
     </dd>
   </dl><span id=
   "emacspeak_002dspeak_002doverlay_002dproperties"></span>
-  <h4 class="subsubsection">12.175.1.50
+  <h4 class="subsubsection">12.175.1.51
   emacspeak-speak-overlay-properties</h4>
   <dl>
     <dt id="index-emacspeak_002dspeak_002doverlay_002dproperties">
@@ -1164,7 +1193,7 @@ Useful to listen to a buffer without switching  contexts.
       </div>
     </dd>
   </dl><span id="emacspeak_002dspeak_002dpage"></span>
-  <h4 class="subsubsection">12.175.1.51 emacspeak-speak-page</h4>
+  <h4 class="subsubsection">12.175.1.52 emacspeak-speak-page</h4>
   <dl>
     <dt id="index-emacspeak_002dspeak_002dpage-1">Command:
     <strong>emacspeak-speak-page</strong> <em>(&amp;optional
@@ -1187,7 +1216,7 @@ Negative prefix arg will read from start of current page to point.
     </dd>
   </dl><span id=
   "emacspeak_002dspeak_002dpage_002dinteractively"></span>
-  <h4 class="subsubsection">12.175.1.52
+  <h4 class="subsubsection">12.175.1.53
   emacspeak-speak-page-interactively</h4>
   <dl>
     <dt id="index-emacspeak_002dspeak_002dpage_002dinteractively">
@@ -1211,7 +1240,7 @@ any other key to speak entire page.
       </div>
     </dd>
   </dl><span id="emacspeak_002dspeak_002dparagraph"></span>
-  <h4 class="subsubsection">12.175.1.53
+  <h4 class="subsubsection">12.175.1.54
   emacspeak-speak-paragraph</h4>
   <dl>
     <dt id="index-emacspeak_002dspeak_002dparagraph-1">Command:
@@ -1236,7 +1265,7 @@ Negative prefix arg will read from start of current paragraph to point.
     </dd>
   </dl><span id=
   "emacspeak_002dspeak_002dparagraph_002dinteractively"></span>
-  <h4 class="subsubsection">12.175.1.54
+  <h4 class="subsubsection">12.175.1.55
   emacspeak-speak-paragraph-interactively</h4>
   <dl>
     <dt id=
@@ -1262,7 +1291,7 @@ any other key to speak entire paragraph.
     </dd>
   </dl><span id=
   "emacspeak_002dspeak_002dpreceding_002dchar"></span>
-  <h4 class="subsubsection">12.175.1.55
+  <h4 class="subsubsection">12.175.1.56
   emacspeak-speak-preceding-char</h4>
   <dl>
     <dt id="index-emacspeak_002dspeak_002dpreceding_002dchar">
@@ -1277,7 +1306,7 @@ any other key to speak entire paragraph.
     </dd>
   </dl><span id=
   "emacspeak_002dspeak_002dpredefined_002dwindow"></span>
-  <h4 class="subsubsection">12.175.1.56
+  <h4 class="subsubsection">12.175.1.57
   emacspeak-speak-predefined-window</h4>
   <dl>
     <dt id="index-emacspeak_002dspeak_002dpredefined_002dwindow-1">
@@ -1339,7 +1368,7 @@ is the same as for the Emacs builtin ‘other-window’.
     </dd>
   </dl><span id=
   "emacspeak_002dspeak_002dprevious_002dfield"></span>
-  <h4 class="subsubsection">12.175.1.57
+  <h4 class="subsubsection">12.175.1.58
   emacspeak-speak-previous-field</h4>
   <dl>
     <dt id="index-emacspeak_002dspeak_002dprevious_002dfield">
@@ -1359,7 +1388,7 @@ is the same as for the Emacs builtin ‘other-window’.
     </dd>
   </dl><span id=
   "emacspeak_002dspeak_002dprevious_002dpersonality_002dchunk"></span>
-  <h4 class="subsubsection">12.175.1.58
+  <h4 class="subsubsection">12.175.1.59
   emacspeak-speak-previous-personality-chunk</h4>
   <dl>
     <dt id=
@@ -1382,7 +1411,7 @@ is the same as for the Emacs builtin ‘other-window’.
       </div>
     </dd>
   </dl><span id="emacspeak_002dspeak_002drectangle"></span>
-  <h4 class="subsubsection">12.175.1.59
+  <h4 class="subsubsection">12.175.1.60
   emacspeak-speak-rectangle</h4>
   <dl>
     <dt id="index-emacspeak_002dspeak_002drectangle-1">Command:
@@ -1406,7 +1435,7 @@ program, arguments specify the START and END of the rectangle.
       </div>
     </dd>
   </dl><span id="emacspeak_002dspeak_002dregion"></span>
-  <h4 class="subsubsection">12.175.1.60 emacspeak-speak-region</h4>
+  <h4 class="subsubsection">12.175.1.61 emacspeak-speak-region</h4>
   <dl>
     <dt id="index-emacspeak_002dspeak_002dregion-1">Command:
     <strong>emacspeak-speak-region</strong> <em>(start
@@ -1428,7 +1457,7 @@ program, arguments specify the START and END of the rectangle.
     </dd>
   </dl><span id=
   "emacspeak_002dspeak_002drest_002dof_002dbuffer"></span>
-  <h4 class="subsubsection">12.175.1.61
+  <h4 class="subsubsection">12.175.1.62
   emacspeak-speak-rest-of-buffer</h4>
   <dl>
     <dt id=
@@ -1450,7 +1479,7 @@ program, arguments specify the START and END of the rectangle.
     </dd>
   </dl><span id=
   "emacspeak_002dspeak_002drun_002dshell_002dcommand"></span>
-  <h4 class="subsubsection">12.175.1.62
+  <h4 class="subsubsection">12.175.1.63
   emacspeak-speak-run-shell-command</h4>
   <dl>
     <dt id=
@@ -1483,7 +1512,7 @@ normally bound to C-e M-i.
     </dd>
   </dl><span id=
   "emacspeak_002dspeak_002dseconds_002dsince_002depoch"></span>
-  <h4 class="subsubsection">12.175.1.63
+  <h4 class="subsubsection">12.175.1.64
   emacspeak-speak-seconds-since-epoch</h4>
   <dl>
     <dt id=
@@ -1503,7 +1532,7 @@ normally bound to C-e M-i.
       </div>
     </dd>
   </dl><span id="emacspeak_002dspeak_002dsentence"></span>
-  <h4 class="subsubsection">12.175.1.64
+  <h4 class="subsubsection">12.175.1.65
   emacspeak-speak-sentence</h4>
   <dl>
     <dt id="index-emacspeak_002dspeak_002dsentence">Command:
@@ -1522,7 +1551,7 @@ Negative prefix arg speaks from start of sentence to point.
     </dd>
   </dl><span id=
   "emacspeak_002dspeak_002dset_002ddisplay_002dtable"></span>
-  <h4 class="subsubsection">12.175.1.65
+  <h4 class="subsubsection">12.175.1.66
   emacspeak-speak-set-display-table</h4>
   <dl>
     <dt id=
@@ -1543,7 +1572,7 @@ setting to be global.
       </div>
     </dd>
   </dl><span id="emacspeak_002dspeak_002dsexp"></span>
-  <h4 class="subsubsection">12.175.1.66 emacspeak-speak-sexp</h4>
+  <h4 class="subsubsection">12.175.1.67 emacspeak-speak-sexp</h4>
   <dl>
     <dt id="index-emacspeak_002dspeak_002dsexp-1">Command:
     <strong>emacspeak-speak-sexp</strong> <em>(&amp;optional
@@ -1566,7 +1595,7 @@ Negative prefix arg speaks from start of sexp to point.
     </dd>
   </dl><span id=
   "emacspeak_002dspeak_002dsexp_002dinteractively"></span>
-  <h4 class="subsubsection">12.175.1.67
+  <h4 class="subsubsection">12.175.1.68
   emacspeak-speak-sexp-interactively</h4>
   <dl>
     <dt id="index-emacspeak_002dspeak_002dsexp_002dinteractively">
@@ -1585,7 +1614,7 @@ any other key to speak entire sexp.
       </div>
     </dd>
   </dl><span id="emacspeak_002dspeak_002dskim_002dbuffer"></span>
-  <h4 class="subsubsection">12.175.1.68
+  <h4 class="subsubsection">12.175.1.69
   emacspeak-speak-skim-buffer</h4>
   <dl>
     <dt id="index-emacspeak_002dspeak_002dskim_002dbuffer">Command:
@@ -1606,7 +1635,7 @@ any other key to speak entire sexp.
     </dd>
   </dl><span id=
   "emacspeak_002dspeak_002dspaces_002dat_002dpoint"></span>
-  <h4 class="subsubsection">12.175.1.69
+  <h4 class="subsubsection">12.175.1.70
   emacspeak-speak-spaces-at-point</h4>
   <dl>
     <dt id=
@@ -1633,7 +1662,7 @@ any other key to speak entire sexp.
     </dd>
   </dl><span id=
   "emacspeak_002dspeak_002dspell_002dcurrent_002dword"></span>
-  <h4 class="subsubsection">12.175.1.70
+  <h4 class="subsubsection">12.175.1.71
   emacspeak-speak-spell-current-word</h4>
   <dl>
     <dt id=
@@ -1650,7 +1679,7 @@ any other key to speak entire sexp.
     </dd>
   </dl><span id=
   "emacspeak_002dspeak_002dthis_002dpersonality_002dchunk"></span>
-  <h4 class="subsubsection">12.175.1.71
+  <h4 class="subsubsection">12.175.1.72
   emacspeak-speak-this-personality-chunk</h4>
   <dl>
     <dt id=
@@ -1672,7 +1701,7 @@ any other key to speak entire sexp.
       </div>
     </dd>
   </dl><span id="emacspeak_002dspeak_002dtime"></span>
-  <h4 class="subsubsection">12.175.1.72 emacspeak-speak-time</h4>
+  <h4 class="subsubsection">12.175.1.73 emacspeak-speak-time</h4>
   <dl>
     <dt id="index-emacspeak_002dspeak_002dtime-1">Command:
     <strong>emacspeak-speak-time</strong> <em>(&amp;optional
@@ -1696,7 +1725,7 @@ Second interactive prefix sets clock to new timezone.
       </div>
     </dd>
   </dl><span id="emacspeak_002dspeak_002dversion"></span>
-  <h4 class="subsubsection">12.175.1.73
+  <h4 class="subsubsection">12.175.1.74
   emacspeak-speak-version</h4>
   <dl>
     <dt id="index-emacspeak_002dspeak_002dversion-1">Command:
@@ -1720,7 +1749,7 @@ Optional interactive prefix arg ‘speak-rev’ speaks only the Git revision num
       </div>
     </dd>
   </dl><span id="emacspeak_002dspeak_002dvisual_002dline"></span>
-  <h4 class="subsubsection">12.175.1.74
+  <h4 class="subsubsection">12.175.1.75
   emacspeak-speak-visual-line</h4>
   <dl>
     <dt id="index-emacspeak_002dspeak_002dvisual_002dline">Command:
@@ -1736,7 +1765,7 @@ Cues the start of a physical line with auditory icon ‘left’.
     </dd>
   </dl><span id=
   "emacspeak_002dspeak_002dvoice_002dannotate_002dparagraphs"></span>
-  <h4 class="subsubsection">12.175.1.75
+  <h4 class="subsubsection">12.175.1.76
   emacspeak-speak-voice-annotate-paragraphs</h4>
   <dl>
     <dt id=
@@ -1757,7 +1786,7 @@ Useful to do this before you listen to an entire buffer.
     </dd>
   </dl><span id=
   "emacspeak_002dspeak_002dwhich_002dfunction"></span>
-  <h4 class="subsubsection">12.175.1.76
+  <h4 class="subsubsection">12.175.1.77
   emacspeak-speak-which-function</h4>
   <dl>
     <dt id="index-emacspeak_002dspeak_002dwhich_002dfunction">
@@ -1779,7 +1808,7 @@ which-func without turning that mode on.
     </dd>
   </dl><span id=
   "emacspeak_002dspeak_002dwindow_002dinformation"></span>
-  <h4 class="subsubsection">12.175.1.77
+  <h4 class="subsubsection">12.175.1.78
   emacspeak-speak-window-information</h4>
   <dl>
     <dt id=
@@ -1801,7 +1830,7 @@ which-func without turning that mode on.
       </div>
     </dd>
   </dl><span id="emacspeak_002dspeak_002dword"></span>
-  <h4 class="subsubsection">12.175.1.78 emacspeak-speak-word</h4>
+  <h4 class="subsubsection">12.175.1.79 emacspeak-speak-word</h4>
   <dl>
     <dt id="index-emacspeak_002dspeak_002dword-1">Command:
     <strong>emacspeak-speak-word</strong> <em>(&amp;optional
@@ -1826,7 +1855,7 @@ spelled out  instead of being spoken.
     </dd>
   </dl><span id=
   "emacspeak_002dspeak_002dword_002dinteractively"></span>
-  <h4 class="subsubsection">12.175.1.79
+  <h4 class="subsubsection">12.175.1.80
   emacspeak-speak-word-interactively</h4>
   <dl>
     <dt id="index-emacspeak_002dspeak_002dword_002dinteractively">
@@ -1845,7 +1874,7 @@ any other key to speak entire word.
       </div>
     </dd>
   </dl><span id="emacspeak_002dspeak_002dworld_002dclock"></span>
-  <h4 class="subsubsection">12.175.1.80
+  <h4 class="subsubsection">12.175.1.81
   emacspeak-speak-world-clock</h4>
   <dl>
     <dt id="index-emacspeak_002dspeak_002dworld_002dclock">Command:
@@ -1865,7 +1894,7 @@ Optional second arg ‘set’ sets the TZ environment variable as well.
     </dd>
   </dl><span id=
   "emacspeak_002dswitch_002dto_002dreference_002dbuffer"></span>
-  <h4 class="subsubsection">12.175.1.81
+  <h4 class="subsubsection">12.175.1.82
   emacspeak-switch-to-reference-buffer</h4>
   <dl>
     <dt id=
@@ -1883,7 +1912,7 @@ Optional second arg ‘set’ sets the TZ environment variable as well.
       </div>
     </dd>
   </dl><span id="emacspeak_002dtoggle_002daction_002dmode"></span>
-  <h4 class="subsubsection">12.175.1.82
+  <h4 class="subsubsection">12.175.1.83
   emacspeak-toggle-action-mode</h4>
   <dl>
     <dt id="index-emacspeak_002dtoggle_002daction_002dmode">
@@ -1902,7 +1931,7 @@ current local  value to the result.
     </dd>
   </dl><span id=
   "emacspeak_002dtoggle_002daudio_002dindentation"></span>
-  <h4 class="subsubsection">12.175.1.83
+  <h4 class="subsubsection">12.175.1.84
   emacspeak-toggle-audio-indentation</h4>
   <dl>
     <dt id=
@@ -1931,7 +1960,7 @@ results in the number of initial spaces being spoken.
     </dd>
   </dl><span id=
   "emacspeak_002dtoggle_002dcharacter_002decho"></span>
-  <h4 class="subsubsection">12.175.1.84
+  <h4 class="subsubsection">12.175.1.85
   emacspeak-toggle-character-echo</h4>
   <dl>
     <dt id="index-emacspeak_002dtoggle_002dcharacter_002decho-1">
@@ -1954,7 +1983,7 @@ current local  value to the result.
       </div>
     </dd>
   </dl><span id="emacspeak_002dtoggle_002dheader_002dline"></span>
-  <h4 class="subsubsection">12.175.1.85
+  <h4 class="subsubsection">12.175.1.86
   emacspeak-toggle-header-line</h4>
   <dl>
     <dt id="index-emacspeak_002dtoggle_002dheader_002dline">
@@ -1968,7 +1997,7 @@ current local  value to the result.
       </div>
     </dd>
   </dl><span id="emacspeak_002dtoggle_002dline_002decho"></span>
-  <h4 class="subsubsection">12.175.1.86
+  <h4 class="subsubsection">12.175.1.87
   emacspeak-toggle-line-echo</h4>
   <dl>
     <dt id="index-emacspeak_002dtoggle_002dline_002decho-1">
@@ -1990,7 +2019,7 @@ current local  value to the result.
       </div>
     </dd>
   </dl><span id="emacspeak_002dtoggle_002dmail_002dalert"></span>
-  <h4 class="subsubsection">12.175.1.87
+  <h4 class="subsubsection">12.175.1.88
   emacspeak-toggle-mail-alert</h4>
   <dl>
     <dt id="index-emacspeak_002dtoggle_002dmail_002dalert">Command:
@@ -2014,7 +2043,7 @@ indicating the arrival  of new mail when displaying the mode line.
       </div>
     </dd>
   </dl><span id="emacspeak_002dtoggle_002dshow_002dpoint"></span>
-  <h4 class="subsubsection">12.175.1.88
+  <h4 class="subsubsection">12.175.1.89
   emacspeak-toggle-show-point</h4>
   <dl>
     <dt id="index-emacspeak_002dtoggle_002dshow_002dpoint">Command:
@@ -2037,7 +2066,7 @@ current local  value to the result.
     </dd>
   </dl><span id=
   "emacspeak_002dtoggle_002dspeak_002dline_002dinvert_002dfilter"></span>
-  <h4 class="subsubsection">12.175.1.89
+  <h4 class="subsubsection">12.175.1.90
   emacspeak-toggle-speak-line-invert-filter</h4>
   <dl>
     <dt id=
@@ -2063,7 +2092,7 @@ current local  value to the result.
     </dd>
   </dl><span id=
   "emacspeak_002dtoggle_002dspeak_002dmessages"></span>
-  <h4 class="subsubsection">12.175.1.90
+  <h4 class="subsubsection">12.175.1.91
   emacspeak-toggle-speak-messages</h4>
   <dl>
     <dt id="index-emacspeak_002dtoggle_002dspeak_002dmessages">
@@ -2084,7 +2113,7 @@ current local  value to the result.
       </div>
     </dd>
   </dl><span id="emacspeak_002dtoggle_002dword_002decho"></span>
-  <h4 class="subsubsection">12.175.1.91
+  <h4 class="subsubsection">12.175.1.92
   emacspeak-toggle-word-echo</h4>
   <dl>
     <dt id="index-emacspeak_002dtoggle_002dword_002decho-1">
@@ -2106,7 +2135,7 @@ current local  value to the result.
       </div>
     </dd>
   </dl><span id="emacspeak_002dview_002dnotifications"></span>
-  <h4 class="subsubsection">12.175.1.92
+  <h4 class="subsubsection">12.175.1.93
   emacspeak-view-notifications</h4>
   <dl>
     <dt id="index-emacspeak_002dview_002dnotifications">Command:
@@ -2127,7 +2156,7 @@ current local  value to the result.
       </div>
     </dd>
   </dl><span id="emacspeak_002dzap_002dtts"></span>
-  <h4 class="subsubsection">12.175.1.93 emacspeak-zap-tts</h4>
+  <h4 class="subsubsection">12.175.1.94 emacspeak-zap-tts</h4>
   <dl>
     <dt id="index-emacspeak_002dzap_002dtts">Command:
     <strong>emacspeak-zap-tts</strong></dt>
