--- a/manual/Emacspeak-Commands-And-Options.html
+++ b/manual/Emacspeak-Commands-And-Options.html
@@ -1390,6 +1390,12 @@
     </tr>
     <tr>
       <td align="left" valign="top">• <a href=
+      "emacspeak_002dvertico.html">emacspeak-vertico</a></td>
+      <td>&nbsp;&nbsp;</td>
+      <td align="left" valign="top">Speech-enable Vertico.</td>
+    </tr>
+    <tr>
+      <td align="left" valign="top">• <a href=
       "emacspeak_002dview.html">emacspeak-view</a></td>
       <td>&nbsp;&nbsp;</td>
       <td align="left" valign="top">Speech enable View mode –
