--- a/manual/emacspeak_002dvdiff.html
+++ b/manual/emacspeak_002dvdiff.html
@@ -23,8 +23,8 @@
   "Table of Contents" />
   <link href="Emacspeak-Commands-And-Options.html" rel="up" title=
   "Emacspeak Commands And Options" />
-  <link href="emacspeak_002dview.html" rel="next" title=
-  "emacspeak-view" />
+  <link href="emacspeak_002dvertico.html" rel="next" title=
+  "emacspeak-vertico" />
   <link href="emacspeak_002durl_002dtemplate.html" rel="prev"
   title="emacspeak-url-template" />
   <style type="text/css">
@@ -53,8 +53,8 @@
 <body lang="en" xml:lang="en">
   <span id="emacspeak_002dvdiff"></span>
   <div class="header">
-    <p>Next: <a href="emacspeak_002dview.html" accesskey="n" rel=
-    "next">emacspeak-view</a>, Previous: <a href=
+    <p>Next: <a href="emacspeak_002dvertico.html" accesskey="n"
+    rel="next">emacspeak-vertico</a>, Previous: <a href=
     "emacspeak_002durl_002dtemplate.html" accesskey="p" rel=
     "prev">emacspeak-url-template</a>, Up: <a href=
     "Emacspeak-Commands-And-Options.html" accesskey="u" rel=
