--- a/manual/emacspeak_002dview.html
+++ b/manual/emacspeak_002dview.html
@@ -25,8 +25,8 @@
   "Emacspeak Commands And Options" />
   <link href="emacspeak_002dvm.html" rel="next" title=
   "emacspeak-vm" />
-  <link href="emacspeak_002dvdiff.html" rel="prev" title=
-  "emacspeak-vdiff" />
+  <link href="emacspeak_002dvertico.html" rel="prev" title=
+  "emacspeak-vertico" />
   <style type="text/css">
   /*<![CDATA[*/
   <!--
@@ -55,8 +55,8 @@
   <div class="header">
     <p>Next: <a href="emacspeak_002dvm.html" accesskey="n" rel=
     "next">emacspeak-vm</a>, Previous: <a href=
-    "emacspeak_002dvdiff.html" accesskey="p" rel=
-    "prev">emacspeak-vdiff</a>, Up: <a href=
+    "emacspeak_002dvertico.html" accesskey="p" rel=
+    "prev">emacspeak-vertico</a>, Up: <a href=
     "Emacspeak-Commands-And-Options.html" accesskey="u" rel=
     "up">Emacspeak Commands And Options</a> &nbsp; [<a href=
     "index.html#SEC_Contents" title="Table of contents" rel=
@@ -65,13 +65,13 @@
   </div>
   <hr />
   <span id="emacspeak_002dview-1"></span>
-  <h3 class="section">12.199 emacspeak-view</h3>
+  <h3 class="section">12.200 emacspeak-view</h3>
   <p>Provide additional advice to view-mode</p><span id=
   "Emacspeak_002dView-Commands"></span>
-  <h4 class="subsection">12.199.1 Emacspeak-View
+  <h4 class="subsection">12.200.1 Emacspeak-View
   Commands</h4><span id=
   "emacspeak_002dview_002dline_002dto_002dtop"></span>
-  <h4 class="subsubsection">12.199.1.1
+  <h4 class="subsubsection">12.200.1.1
   emacspeak-view-line-to-top</h4>
   <dl>
     <dt id="index-emacspeak_002dview_002dline_002dto_002dtop">
