--- a/manual/emacspeak_002dm_002dplayer.html
+++ b/manual/emacspeak_002dm_002dplayer.html
@@ -853,7 +853,8 @@ to play  tracks.
   emacspeak-m-player-loop</h4>
   <dl>
     <dt id="index-emacspeak_002dm_002dplayer_002dloop">Command:
-    <strong>emacspeak-m-player-loop</strong></dt>
+    <strong>emacspeak-m-player-loop</strong> <em>(&amp;optional
+    raw)</em></dt>
     <dd>
       <dl compact="compact">
         <dt><kbd>C-e x ;</kbd></dt>
@@ -865,6 +866,9 @@ to play  tracks.
       <div class="format">
         <pre class=
         "format">M-Player with repeat indefinitely  turned on.
+Interactive prefix ‘raw’ reads a raw URL.
+
+(fn &amp;optional RAW)
 </pre>
       </div>
     </dd>
