--- a/manual/index.html
+++ b/manual/index.html
@@ -53,7 +53,7 @@
   <h1 class="settitle c2">Emacspeak User’s Manual — 2nd
   Edition.</h1>
   <p>This manual documents <strong>Emacspeak, The Complete Audio
-  Desktop</strong> and was last updated on June 5,
+  Desktop</strong> and was last updated on June 6,
   2021.</p><span id="SEC_Overview"></span>
   <h2 class="shortcontents-heading">Short Table of Contents</h2>
   <div class="shortcontents">
@@ -5649,16 +5649,24 @@
                   12.116.2.78
                   emacspeak-m-player-write-clip</a></li>
                   <li><a id=
+                  "toc-emacspeak_002dm_002dplayer_002dyoutube_002dlive"
+                  href=
+                  "emacspeak_002dm_002dplayer.html#emacspeak_002dm_002dplayer_002dyoutube_002dlive"
+                  name=
+                  "toc-emacspeak_002dm_002dplayer_002dyoutube_002dlive">
+                  12.116.2.79
+                  emacspeak-m-player-youtube-live</a></li>
+                  <li><a id=
                   "toc-emacspeak_002dm_002dplayer_002dyoutube_002dplayer"
                   href=
                   "emacspeak_002dm_002dplayer.html#emacspeak_002dm_002dplayer_002dyoutube_002dplayer"
                   name=
                   "toc-emacspeak_002dm_002dplayer_002dyoutube_002dplayer">
-                  12.116.2.79
+                  12.116.2.80
                   emacspeak-m-player-youtube-player</a></li>
                   <li><a id="toc-emacspeak_002dmultimedia" href=
                   "emacspeak_002dm_002dplayer.html#emacspeak_002dmultimedia"
-                  name="toc-emacspeak_002dmultimedia">12.116.2.80
+                  name="toc-emacspeak_002dmultimedia">12.116.2.81
                   emacspeak-multimedia</a></li>
                 </ul>
               </li>
