--- a/manual/emacspeak_002dm_002dplayer.html
+++ b/manual/emacspeak_002dm_002dplayer.html
@@ -1574,8 +1574,27 @@ This will work if the soundcard is set to 48000.
       </div>
     </dd>
   </dl><span id=
-  "emacspeak_002dm_002dplayer_002dyoutube_002dplayer"></span>
+  "emacspeak_002dm_002dplayer_002dyoutube_002dlive"></span>
   <h4 class="subsubsection">12.116.2.79
+  emacspeak-m-player-youtube-live</h4>
+  <dl>
+    <dt id="index-emacspeak_002dm_002dplayer_002dyoutube_002dlive">
+    Command: <strong>emacspeak-m-player-youtube-live</strong>
+    <em>(url)</em></dt>
+    <dd>
+      <span id=
+      "index-emacspeak_002dm_002dplayer_002dyoutube_002dlive-1"></span>
+      <div class="format">
+        <pre class=
+        "format">Use youtube-dl and mplayer to live-stream   from Youtube. 
+
+(fn URL)
+</pre>
+      </div>
+    </dd>
+  </dl><span id=
+  "emacspeak_002dm_002dplayer_002dyoutube_002dplayer"></span>
+  <h4 class="subsubsection">12.116.2.80
   emacspeak-m-player-youtube-player</h4>
   <dl>
     <dt id=
@@ -1601,7 +1620,7 @@ Optional prefix arg ‘best’ chooses highest.
       </div>
     </dd>
   </dl><span id="emacspeak_002dmultimedia"></span>
-  <h4 class="subsubsection">12.116.2.80 emacspeak-multimedia</h4>
+  <h4 class="subsubsection">12.116.2.81 emacspeak-multimedia</h4>
   <dl>
     <dt id="index-emacspeak_002dmultimedia">Command:
     <strong>emacspeak-multimedia</strong></dt>
