--- a/manual/Key-Index.html
+++ b/manual/Key-Index.html
@@ -2390,6 +2390,15 @@
     <tr>
       <td></td>
       <td valign="top"><a href=
+      "emacspeak_002dm_002dplayer.html#index-_003cfn_003e-x-l"><code>
+      &lt;fn&gt; x l</code></a>:</td>
+      <td>&nbsp;</td>
+      <td valign="top"><a href=
+      "emacspeak_002dm_002dplayer.html">emacspeak-m-player</a></td>
+    </tr>
+    <tr>
+      <td></td>
+      <td valign="top"><a href=
       "emacspeak_002dwizards.html#index-_003cfn_003e-x-o"><code>&lt;fn&gt;
       x o</code></a>:</td>
       <td>&nbsp;</td>
@@ -6099,6 +6108,15 @@
       <td>&nbsp;</td>
       <td valign="top"><a href=
       "emacspeak_002djabber.html">emacspeak-jabber</a></td>
+    </tr>
+    <tr>
+      <td></td>
+      <td valign="top"><a href=
+      "emacspeak_002dm_002dplayer.html#index-C_002de-x-l"><code>C-e
+      x l</code></a>:</td>
+      <td>&nbsp;</td>
+      <td valign="top"><a href=
+      "emacspeak_002dm_002dplayer.html">emacspeak-m-player</a></td>
     </tr>
     <tr>
       <td></td>
