--- a/manual/emacspeak_002dm_002dplayer.html
+++ b/manual/emacspeak_002dm_002dplayer.html
@@ -1582,7 +1582,12 @@ This will work if the soundcard is set to 48000.
     Command: <strong>emacspeak-m-player-youtube-live</strong>
     <em>(url)</em></dt>
     <dd>
-      <span id=
+      <dl compact="compact">
+        <dt><kbd>C-e x l</kbd></dt>
+        <dd><span id="index-C_002de-x-l"></span></dd>
+        <dt><kbd>&lt;fn&gt; x l</kbd></dt>
+        <dd><span id="index-_003cfn_003e-x-l"></span></dd>
+      </dl><span id=
       "index-emacspeak_002dm_002dplayer_002dyoutube_002dlive-1"></span>
       <div class="format">
         <pre class=
