--- a/manual/Key-Index.html
+++ b/manual/Key-Index.html
@@ -3152,6 +3152,15 @@
     <tr>
       <td></td>
       <td valign="top"><a href=
+      "emacspeak_002dextras.html#index-C_002d_003b-C_002dt"><code>C-;
+      C-t</code></a>:</td>
+      <td>&nbsp;</td>
+      <td valign="top"><a href=
+      "emacspeak_002dextras.html">emacspeak-extras</a></td>
+    </tr>
+    <tr>
+      <td></td>
+      <td valign="top"><a href=
       "gmaps.html#index-C_002d_003b-e"><code>C-; e</code></a>:</td>
       <td>&nbsp;</td>
       <td valign="top"><a href="gmaps.html">gmaps</a></td>
@@ -6546,6 +6555,15 @@
       <td>&nbsp;</td>
       <td valign="top"><a href=
       "emacspeak_002dwizards.html">emacspeak-wizards</a></td>
+    </tr>
+    <tr>
+      <td></td>
+      <td valign="top"><a href=
+      "emacspeak_002dextras.html#index-C_002dx-_0040-h-C_002dt"><code>
+      C-x @ h C-t</code></a>:</td>
+      <td>&nbsp;</td>
+      <td valign="top"><a href=
+      "emacspeak_002dextras.html">emacspeak-extras</a></td>
     </tr>
     <tr>
       <td></td>
