--- a/manual/emacspeak_002dcalibredb.html
+++ b/manual/emacspeak_002dcalibredb.html
@@ -66,6 +66,29 @@
   <hr />
   <span id="emacspeak_002dcalibredb-1"></span>
   <h3 class="section">12.31 emacspeak-calibredb</h3>
-  <p>CALIBREDB == Browse And Search Local Calibre Library</p>
+  <p>CALIBREDB == Browse And Search Local Calibre
+  Library</p><span id="Emacspeak_002dCalibredb-Commands"></span>
+  <h4 class="subsection">12.31.1 Emacspeak-Calibredb
+  Commands</h4><span id=
+  "emacspeak_002dcalibredb_002depub_002deww"></span>
+  <h4 class="subsubsection">12.31.1.1
+  emacspeak-calibredb-epub-eww</h4>
+  <dl>
+    <dt id="index-emacspeak_002dcalibredb_002depub_002deww">
+    Command: <strong>emacspeak-calibredb-epub-eww</strong>
+    <em>(&amp;optional broken-ncx)</em></dt>
+    <dd>
+      <span id=
+      "index-emacspeak_002dcalibredb_002depub_002deww-1"></span>
+      <div class="format">
+        <pre class="format">Open EPub at point in EWW.
+Optional prefix arg uses alternative renderer that handles epubs
+with broken NCX files.
+
+(fn &amp;optional BROKEN-NCX)
+</pre>
+      </div>
+    </dd>
+  </dl>
 </body>
 </html>
