--- a/manual/emacspeak_002dextras.html
+++ b/manual/emacspeak_002dextras.html
@@ -358,9 +358,13 @@ Sample text to use comes from variable
     Command: <strong>emacspeak-wizards-tramp-open-location</strong>
     <em>(name)</em></dt>
     <dd>
-      <span id=
-      "index-emacspeak_002dwizards_002dtramp_002dopen_002dlocation-1">
-      </span>
+      <dl compact="compact">
+        <dt><kbd>C-; C-t</kbd></dt>
+        <dd><span id="index-C_002d_003b-C_002dt"></span></dd>
+        <dt><kbd>C-x @ h C-t</kbd></dt>
+        <dd><span id="index-C_002dx-_0040-h-C_002dt"></span></dd>
+      </dl><span id=
+      "index-emacspeak_002dwizards_002dtramp_002dopen_002dlocation-1"></span>
       <div class="format">
         <pre class="format">Open specified tramp location.
 Location is specified by name.
@@ -408,8 +412,8 @@ Location is specified by name.
     <dd>
       <p>Tramp locations used by Emacspeak tramp wizard. Locations
       added here via custom can be opened using command
-      emacspeak-wizards-tramp-open-location bound to M-x
-      emacspeak-wizards-tramp-open-location.</p>
+      emacspeak-wizards-tramp-open-location bound to C-x @ h
+      C-t.</p>
     </dd>
   </dl>
   <hr />
