--- a/manual/index.html
+++ b/manual/index.html
@@ -53,7 +53,7 @@
   <h1 class="settitle c2">Emacspeak User’s Manual — 2nd
   Edition.</h1>
   <p>This manual documents <strong>Emacspeak, The Complete Audio
-  Desktop</strong> and was last updated on June 6,
+  Desktop</strong> and was last updated on June 20,
   2021.</p><span id="SEC_Overview"></span>
   <h2 class="shortcontents-heading">Short Table of Contents</h2>
   <div class="shortcontents">
@@ -1613,10 +1613,29 @@
               </li>
             </ul>
           </li>
-          <li><a id="toc-emacspeak_002dcalibredb-1" href=
-          "emacspeak_002dcalibredb.html#emacspeak_002dcalibredb"
-          name="toc-emacspeak_002dcalibredb-1">12.31
-          emacspeak-calibredb</a></li>
+          <li>
+            <a id="toc-emacspeak_002dcalibredb-1" href=
+            "emacspeak_002dcalibredb.html#emacspeak_002dcalibredb"
+            name="toc-emacspeak_002dcalibredb-1">12.31
+            emacspeak-calibredb</a>
+            <ul class="no-bullet">
+              <li>
+                <a id="toc-Emacspeak_002dCalibredb-Commands" href=
+                "emacspeak_002dcalibredb.html#Emacspeak_002dCalibredb-Commands"
+                name="toc-Emacspeak_002dCalibredb-Commands">12.31.1
+                Emacspeak-Calibredb Commands</a>
+                <ul class="no-bullet">
+                  <li><a id=
+                  "toc-emacspeak_002dcalibredb_002depub_002deww"
+                  href=
+                  "emacspeak_002dcalibredb.html#emacspeak_002dcalibredb_002depub_002deww"
+                  name=
+                  "toc-emacspeak_002dcalibredb_002depub_002deww">12.31.1.1
+                  emacspeak-calibredb-epub-eww</a></li>
+                </ul>
+              </li>
+            </ul>
+          </li>
           <li>
             <a id="toc-emacspeak_002dchess-1" href=
             "emacspeak_002dchess.html#emacspeak_002dchess" name=
