--- a/manual/emacspeak.html
+++ b/manual/emacspeak.html
@@ -87,12 +87,8 @@
       </dl><span id=
       "index-emacspeak_002dtoggle_002dcomint_002doutput_002dmonitor-1"></span>
       <div class="format">
-        <pre class=
-        "format">Toggle state of Emacspeak comint monitor.
-When turned on, comint output is automatically spoken.  Turn this on if
-you want your shell to speak its results.  Interactive
-PREFIX arg means toggle the global default value, and then
-set the current local value to the result.
+        <pre class="format">Toggle  Emacspeak comint monitor.
+Interactive PREFIX arg means toggle the global default value. 
 </pre>
       </div>
     </dd>
