--- a/manual/emacspeak_002dcomint.html
+++ b/manual/emacspeak_002dcomint.html
@@ -82,8 +82,7 @@
       <span id=
       "index-emacspeak_002dcompletion_002dpick_002dcompletion-1"></span>
       <div class="format">
-        <pre class=
-        "format">Pick completion and return safely where we came from.
+        <pre class="format">Pick completion.
 </pre>
       </div>
     </dd>
@@ -99,12 +98,8 @@
       <span id=
       "index-emacspeak_002dtoggle_002dcomint_002dautospeak-1"></span>
       <div class="format">
-        <pre class=
-        "format">Toggle state of Emacspeak comint autospeak.
-When turned on, comint output is automatically spoken.  Turn this on if
-you want your shell to speak its results.  Interactive
-PREFIX arg means toggle the global default value, and then
-set the current local value to the result.
+        <pre class="format">Toggle comint autospeak.
+Interactive PREFIX arg means toggle  global default value. 
 
 (fn &amp;optional PREFIX)
 </pre>
@@ -130,8 +125,8 @@ set the current local value to the result.
       <div class="format">
         <pre class=
         "format">Toggle comint-autospeak when in a comint or vterm buffer.
-Otherwise call voice-setup-toggle-silence-personality which toggles the
-personality under point.
+Otherwise call voice-setup-toggle-silence-personality which
+toggles personality under point.
 </pre>
       </div>
     </dd>
@@ -141,8 +136,7 @@ personality under point.
     <dt id="index-User-Option-23">Variable: <strong>User
     Option</strong> <em>emacspeak-comint-autospeak</em></dt>
     <dd>
-      <p>Says if comint output is automatically spoken. You can use
-      ‘emacspeak-toggle-comint-autospeak‘ bound to M-x
+      <p>Speak comint output. Use M-x
       emacspeak-toggle-comint-autospeak to toggle this setting.</p>
     </dd>
   </dl>
