--- a/manual/voice_002dsetup.html
+++ b/manual/voice_002dsetup.html
@@ -135,6 +135,9 @@ If called from Lisp, toggle the mode if ARG is ‘toggle’.  Enable
 the mode if ARG is nil, omitted, or is a positive number.
 Disable the mode if ARG is a negative number.
 
+To check whether the minor mode is enabled in the current buffer,
+evaluate ‘voice-lock-mode’.
+
 The mode’s hook is called both when the mode is enabled and when
 it is disabled.
 
