--- a/manual/dtk_002dspeak.html
+++ b/manual/dtk_002dspeak.html
@@ -115,7 +115,7 @@ this pattern if previously added.
     <dd>
       <span id="index-dtk_002dlist_002dlanguages-1"></span>
       <div class="format">
-        <pre class="format">Say the available languages.
+        <pre class="format">List  available languages.
 </pre>
       </div>
     </dd>
@@ -226,8 +226,7 @@ program. Port defaults to dtk-local-server-port
       </dl><span id="index-dtk_002dselect_002dserver-2"></span>
       <div class="format">
         <pre class="format">Select  speech server ‘program’.
- Optional arg device sets up environment variable
-ALSA_DEFAULT.
+ Optional arg device sets  env-var ALSA_DEFAULT.
 
 (fn PROGRAM &amp;optional DEVICE)
 </pre>
@@ -297,7 +296,7 @@ Argument S specifies the syntax class.
         <dd><span id="index-_003cfn_003e-d-S"></span></dd>
       </dl><span id="index-dtk_002dset_002dlanguage-1"></span>
       <div class="format">
-        <pre class="format">Set language  to  lang.
+        <pre class="format">Set language.
 
 (fn LANG)
 </pre>
@@ -396,12 +395,7 @@ rate = dtk-speech-rate-base + dtk-speech-rate-step * level.
       <span id=
       "index-dtk_002dset_002dpreferred_002dlanguage-1"></span>
       <div class="format">
-        <pre class=
-        "format">Set the alias of the preferred language:
-For example if alias="en" lang="en_GB",
-then the following call:
- dtk-set-language("en")
-will set "en_GB". 
+        <pre class="format">Set language by alias.
 
 (fn ALIAS LANG)
 </pre>
@@ -737,12 +731,11 @@ value to the result.
     <dt id="index-User-Option-5">Variable: <strong>User
     Option</strong> <em>dtk-cleanup-repeats</em></dt>
     <dd>
-      <p>List of repeating patterns to clean up. Use command
-      ‘dtk-add-cleanup-pattern’ bound to C-e d a to add more
+      <p>List of repeating patterns to clean up. Use
+      ‘dtk-add-cleanup-pattern’ bound to C-e d a to add
       patterns.</p>
-      <p>If more than 3 consecutive occurrences of a specified
-      pattern is found, emacspeak replaces it with a repeat
-      count.</p>
+      <p>More than 3 consecutive occurrences of a pattern is
+      replaced with a repeat count.</p>
     </dd>
   </dl>
   <dl>
@@ -774,14 +767,14 @@ value to the result.
     <dt id="index-User-Option-9">Variable: <strong>User
     Option</strong> <em>dtk-speech-rate-base</em></dt>
     <dd>
-      <p>Value of lowest tolerable speech rate.</p>
+      <p>Value of lowest speech rate.</p>
     </dd>
   </dl>
   <dl>
     <dt id="index-User-Option-10">Variable: <strong>User
     Option</strong> <em>dtk-speech-rate-step</em></dt>
     <dd>
-      <p>Value of speech rate increment used by command
+      <p>Speech rate step used by
       ‘dtk-set-predefined-speech-rate’.</p>
     </dd>
   </dl>
